--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
   <!-- skill section end -->
   <script type="text/javascript"  src="/assets/js/myscript.js"></script>
-  <script  src="/assets/js/skills.json"></script>
+  <script  src="assets/js/skills.json"></script>
 
    <!-- education section -->
 
@@ -123,7 +123,7 @@
       <div class="box-container">
         <div class="box">
           <div class="image">
-            <img draggable="false" src="/assets/images/download.png">
+            <img draggable="false" src="assets/images/download.png">
           </div>
           <div class="content">
             <h3>Master of Computer Application</h3>
@@ -134,7 +134,7 @@
 
         <div class="box">
           <div class="image">
-          <img draggable="false" src="/assets/images/bishopconrad.jpg" alt="">
+          <img draggable="false" src="assets/images/bishopconrad.jpg" alt="">
           </div>
           <div class="content">
           <h3>HSC Science | Informatic Practices</h3>
