--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
   <!-- skill section end -->
   <script type="text/javascript"  src="/assets/js/myscript.js"></script>
-  <script  src="/assets/js/skills.json"></script>
+  <script  src="../assets/js/skills.json"></script>
 
    <!-- education section -->
 
