--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
   <!-- skill section end -->
   <script type="text/javascript"  src="/assets/js/myscript.js"></script>
-  <script  src="../assets/js/skills.json"></script>
+  <script  src="assets/js/skills.json"></script>
 
    <!-- education section -->
 
@@ -270,8 +270,8 @@
     </section>
 
 
- <script type="text/javascript" src="/assets/js/particles.min.js"></script>
-  <script type="text/javascript" src="/assets/js/app.js"></script>
+ <script type="text/javascript" src="assets/js/particles.min.js"></script>
+  <script type="text/javascript" src="assets/js/app.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.js" integrity="sha512-tQQXRDB2wEmuJGtFrmmoFYzNTq8StA1XJrfO0OQbbTxd9G0CwaTDL6/C1y805IlvBVrMwOqob1kf6r/2U5XXVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
  
 
