--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 </section>
 
   <!-- skill section end -->
-  <script type="text/javascript"  src="/assets/js/myscript.js"></script>
-  <script  src="assets/js/skills.json"></script>
+  <script type="text/javascript"  src="assets/js/myscript.js"></script>
+  <script src="assets/js/skills.json"></script>
 
    <!-- education section -->
 
