--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
       
       <div class="resumebtn">
-          <a href="https://docs.google.com/document/d/12JV0R-ZEqGCI5rTEZ-duAJLPPSN8bYJ_/edit" target="_blank" class="btn"><span>Resume</span>
+          <a href="https://drive.google.com/file/d/1itDTu9bwr85P29Kv3xiBbxRqlCTLgm54/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
               <i class="fas fa-chevron-right"></i>
           </a>
       </div>
